fix: avoid overflowing game containers affecting layout

--- a/src/assets/style/Game.scss
+++ b/src/assets/style/Game.scss
@@ -28,6 +28,7 @@
 
 .game {
   position: relative;
+  overflow: hidden;
   margin: 1.5rem;
 }
 
